<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale ="en">

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="actionBar_appName">Contacts</string>
    <string name="action_add">Add a new contact</string>
    <string name="action_edit">Edit Contact</string>
    <string name="action_delete">Delete contact</string>
    <string name="action_save">Save</string>
    <string name="title_activity_add_contact">Add Contact</string>

    <!-- Strings for the add contact activity -->

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="title_activity_edit">Edit Contact</string>
    
    <string name = "contactManagerLabel">Contact Manager</string>
    <string name = "deleteDialog">Do you really want to delete?</string>
    <string name = "confirmDelete">Yes! I am Sure.</string>
    <string name = "cancelDelete">No! This is a Mistake.</string>
    
    <string name = "header1">Contact List</string>
    <string name = "headerDescription">Contact Image</string>   
    

</resources>
